<resources>
    <string name="underline"><u>Attach Photo of Goods</u></string>
    <string name="no_geocoder_available">No geocoder available</string>
    <string name="fetch_address">Fetch address</string>
    <string name="address_found">Address found</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="custom_title">Select atleast 2 Images</string>
    <string name="custom_title2">Upload Profile Image</string>
    <string name="pin_label_text">entry pin</string>
    <string name="pin_content_desc">pin entry</string>
    <string name="app_name">MovHaul</string>
    <string name="customer_booking">Tap to Call Customer Care for booking</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="register_txt">Register</string>
    <string name="user_name_txt">User Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="submit">Submit</string>
    <string name="by_signing_up_you_agree_to_the_terms_amp_conditions"><![CDATA[By signing up you agree to the terms & conditions]]></string>
    <string name="and_privacy_policy_of_MovHaul">and privacy policy of MovHaul</string>
    <string name="mobile_no">Mobile No</string>
    <string name="forgot_mobile_no">Login Via Email?</string>
    <string name="by_signing_up_you_agree_to_the_terms_amp_conditions_nand_privacy_policy_of_MovHaul"><![CDATA[By signing up you agree to the terms & conditions  and privacy policy of MovHaul]]></string>
    <string name="forgot_ph_no">Email Login</string>
    <string name="enter_email">Enter Email</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="drop_location">Drop Location</string>
    <string name="book_assistance">Book Assistance</string>
    <string name="what_can_we_do_for_you_today">What Can We Do for You Today ?</string>
    <string name="select_your_service_request_below">Select your service request below</string>
    <string name="rent_a_truck_van">Rent a Truck/Van</string>
    <string name="charter_your_bus_ride">Charter your Bus Ride</string>
    <string name="request_for_towing">Request for Towing</string>
    <string name="book_now">Book Now</string>
    <string name="book_later">Book Later</string>
    <string name="my_trips">My Trips</string>
    <string name="job_review">Job Review</string>
    <string name="payments">Payments</string>
    <string name="tracking">Tracking</string>
    <string name="offers">Offers</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="no_internet">No internet connection!</string>
    <string name="open_settings">Open Settings</string>
    <string name="loading">Loading..</string>
    <string name="wait">Please wait</string>
    <string name="please_try_again">Please Connect Internet and Try again</string>
    <string name="ent">Enter valid phone number</string>
    <string name="entr">Enter valid email address!</string>
    <string name="s">Thank you for Signing Up MovHaul.</string>
    <string name="asd">Mobile Number Already Registered</string>
    <string name="aew">Email Already Registered</string>
    <string name="uies">Enter User Name!</string>
    <string name="lo">Loading..</string>
    <string name="los">Please wait</string>
    <string name="wa">Enter valid phone Number</string>
    <string name="a">No internet connection!</string>
    <string name="ae">Open Settings</string>
    <string name="asdw">Mobile Number is not registered with MovHaul !</string>
    <string name="asdwasdf">Please wait</string>
    <string name="aoptp">Otp Send to</string>
    <string name="asdunt">Authentication Failed, Enter Corrent OTP</string>
    <string name="ees">You need to grant access to</string>
    <string name="permis_si">Some Permission is Denied</string>
    <string name="wae">Please wait</string>
    <string name="loc">Location Not Enabled</string>
    <string name="alocl">Location services not supporting in this device</string>
    <string name="aec">Enter User Email</string>
    <string name="aes">Enter User Name</string>
    <string name="asdew">Logout</string>
    <string name="adsfb">Choose Drop Location</string>
    <string name="asdf">You already have current job. Please choose book later!</string>
    <string name="aewas">Choose Drop Location</string>
    <string name="drpa">Choose Drop Location</string>
    <string name="asdloc">Location services not supporting in this device</string>
    <string name="goglso">Google Play Services is not available:</string>
    <string name="google_play">Install Google Play Services.</string>
    <string name="unabs">Sorry! unable to create maps</string>
    <string name="asder">Network Error</string>
    <string name="ase">Network Errror. Please Try Again Later</string>
    <string name="aese">Network Error</string>
    <string name="eer">Network Error Please Try Again Later</string>
    <string name="era">Network Errror. Please Try Again Later</string>
    <string name="ext">Exit</string>
    <string name="book_nows">Book Now</string>
    <string name="goods_type">Goods Type</string>
    <string name="description">Description</string>
    <string name="post">Post</string>
    <string name="sasd">Please wait</string>
    <string name="ad">Bus Type</string>
    <string name="ava">Nearby Landmark</string>
    <string name="adsf">Truck Type</string>
    <string name="aev">Nearby Landmark</string>
    <string name="cdaso">Choose Goods Type</string>
    <string name="asda">Choose</string>
    <string name="asdv">Type</string>
    <string name="job_reviews">Job Review</string>
    <string name="pickup">Pickup</string>
    <string name="drop_off">Drop Off</string>
    <string name="nearby_landmark">Nearby Landmark</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="time_remaining">Time Remaining :</string>
    <string name="conts">Continue</string>
    <string name="dons">done!</string>
    <string name="asdfaz">Nearby Landmark</string>
    <string name="vads">Nearby Landmark</string>
    <string name="book_assistances">Book Assistance</string>
    <string name="your_vehicle_type">Your Vehicle Type</string>
    <string name="flatbed_vehicle">FlatBed Vehicle</string>
    <string name="tow_vehicle">Tow Vehicle</string>
    <string name="wrecker_type">Wrecker Type</string>
    <string name="bus">Bus</string>
    <string name="truck">Truck</string>
    <string name="car">Car</string>
    <string name="driver_name">Driver Name</string>
    <string name="driver_ph_no">Driver Ph.No.</string>
    <string name="pickupew">Pickup</string>
    <string name="drops">Drop</string>
    <string name="vehicle_typeas">Vehicle Type</string>
    <string name="vehicle_nods">Vehicle No.</string>
    <string name="cancel_job">Cancel Job</string>
    <string name="curr">Current</string>
    <string name="hist">History</string>
    <string name="upco">Upcoming</string>
    <string name="trucks">Truck</string>
    <string name="cost">Cost</string>
    <string name="rating">Rating</string>
    <string name="filter">Filter</string>
    <string name="low_cost">Low Cost</string>
    <string name="medium_cost">Medium Cost</string>
    <string name="high_cost">High Cost</string>
    <string name="low_rating">Low Rating</string>
    <string name="medium_rating">Medium Rating</string>
    <string name="high_rating">High Rating</string>
    <string name="support">Support</string>
    <string name="feedback">Feedback</string>
    <string name="logout">Logout</string>
    <string name="from_location">From Location</string>
    <string name="to_location">To Location</string>
    <string name="dates">Date</string>
    <string name="times">Time</string>
    <string name="vehicle_types">Vehicle Type</string>
    <string name="vehicle_no">Vehicle No.</string>
    <string name="cancel_joba">Cancel Job</string>
    <string name="to_locationas">To Location</string>
    <string name="from_locationad">From Location</string>
    <string name="login_otp">Login-OTP</string>
    <string name="check_your_message_or">Check Your Message (Or)</string>
    <string name="email_for_otp_code">Email for OTP Code</string>
    <string name="submita">Submit</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="slogin_otp">Login-OTP</string>
    <string name="check_your_message_or2">Check Your Message (Or)</string>
    <string name="email_for_otp_codee">Email for OTP Code</string>
    <string name="resend_otpde">Resend OTP</string>
    <string name="trucksa">Truck</string>
    <string name="driveradfa">Driver</string>
    <string name="namead">Name</string>
    <string name="damage_controlasdf">Damage Control</string>
    <string name="vehicle_typeasd">Vehicle Type</string>
    <string name="number_of_jobs_completedv">Number of Jobs Completed</string>
    <string name="vehicle_breakdown_history">Vehicle Breakdown History</string>
    <string name="drivers_list">Drivers List</string>
    <string name="user_name">User Name</string>
    <string name="emailsa">Email</string>
    <string name="updateac">Update</string>
    <string name="wait_for_some_time_to">Wait for some time to</string>
    <string name="your_job_posted">Your Job Posted</string>
    <string name="successfully">Successfully!!</string>
    <string name="select_your_driver">Select your Driver</string>
    <string name="ok">Ok</string>
    <string name="are_you_sure_want_to">Are you sure want to</string>
    <string name="exit">Exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="our_nearby_assistance_vechicle_will_reach_you_soon">Our Nearby Assistance Vechicle will reach you soon.</string>
    <string name="thanks_for_booking_assistance">Thanks for Booking Assistance!!</string>
    <string name="book_lateras">Book Later</string>
    <string name="datea">Date</string>
    <string name="timea">Time</string>
    <string name="nearby_location">Nearby Location</string>
    <string name="goods_typea">Goods Type</string>
    <string name="select_truck">Select Truck</string>
    <string name="pos">Post</string>
    <string name="login_email">Login Via E-Mail</string>
    <string name="my_jobs">My Jobs</string>
    <string name="book_driver">Book Driver</string>
    <string name="drop">Drop</string>
    <string name="delete_driver">Delete Job</string>
    <string name="ver">Ver 1.78</string>
    <string name="lodo">Loading..</string>
    <string name="wai">Please wait</string>
    <string name="conn">Please Connect Internet and Try again</string>
    <string name="ga">Choose Goods Type</string>
    <string name="ada">Please Select Time</string>
    <string name="adaax">Choose</string>
    <string name="w">Type</string>
    <string name="wea">Please Choose Date First</string>
    <string name="waz">Select Time</string>
    <string name="err">Network Errror. Please Try Again Later</string>
    <string name="asee">Network Error! Please Try Again Later.</string>
    <string name="wqc">Please Connect Internet and Try again</string>
    <string name="adc">Loading..</string>
    <string name="cwa">Please wait</string>
    <string name="acw">Your Trip has Been</string>
    <string name="cwx">Confirmed!!</string>
    <string name="cqa">Our Driver will</string>
    <string name="cxz">Contact you soon..</string>
    <string name="azew">No Drivers Bidded,Please Wait for some more time.</string>
    <string name="awex">Selected Driver</string>
    <string name="zxwea">Successfully!!</string>
    <string name="czwa">Are you sure that</string>
</resources>