<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/top"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:gravity="top">

        <include
            layout="@layout/action_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></include>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_txt"
                android:textColor="#F65F52"
                android:textSize="@dimen/_19sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <include
                layout="@layout/red_underline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></include>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/float_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:textColorHint="@color/colorAccent">

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/user_name_txt"
                android:inputType="text"
                android:maxLines="1"
                android:paddingTop="@dimen/_10sdp"
                android:textColor="#000000"
                android:textSize="@dimen/_15sdp" />
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="#E1E1E1" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/float_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:textColorHint="@color/colorAccent">

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/email"
                android:inputType="textWebEmailAddress"
                android:maxLines="1"
                android:paddingTop="@dimen/_10sdp"
                android:textColor="#000000"
                android:textSize="@dimen/_15sdp" />
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="#E1E1E1" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:arrowSize="@dimen/_15sdp"
                app:countryPreference="US,IN,NG"
                app:customMasterCountries="US,IN,NZ,NG,PL,RO,FR,CY,CZ,CK"
                app:keyboardAutoPopOnSearch="false"
                app:defaultNameCode="us"
                app:textSize="@dimen/_10sdp" />




                <android.support.design.widget.TextInputLayout
                    android:id="@+id/float_mobile"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5sdp"

                    android:textColorHint="@color/colorAccent">

                    <EditText
                        android:id="@+id/editTextMobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/mobile"
                        android:inputType="phone"
                        android:maxLength="12"
                        android:maxLines="1"
                        android:paddingTop="@dimen/_5sdp"
                        android:textColor="#000000"
                        android:textSize="@dimen/_15sdp" />
                </android.support.design.widget.TextInputLayout>



        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="#E1E1E1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center"
        android:padding="@dimen/_3sdp">

        <com.rey.material.widget.Button
            android:id="@+id/btn_submit"
            style="@style/Material.Drawable.Ripple.Touch"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/submit"
            android:gravity="center"
            android:paddingBottom="@dimen/_5sdp"
            android:paddingRight="@dimen/_3sdp"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/_19sdp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:orientation="horizontal">

        <include
            layout="@layout/down_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></include>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/by_signing_up_you_agree_to_the_terms_amp_conditions"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/and_privacy_policy_of_MovHaul"
                android:textSize="@dimen/_10sdp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
