<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/white"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_15sdp"
        android:paddingTop="@dimen/_15sdp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:background="@drawable/truckbg_ico" />

        <TextView
            android:id="@+id/textView_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/thanks_for_booking_assistance"
            android:textColor="@color/dialog_text"
            android:textSize="@dimen/_17sdp" />

        <TextView
            android:id="@+id/textView_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingLeft="@dimen/_35sdp"
            android:paddingRight="@dimen/_35sdp"
            android:paddingTop="@dimen/_10sdp"
            android:text="@string/our_nearby_assistance_vechicle_will_reach_you_soon"
            android:textColor="@color/dialog_text"
            android:textSize="@dimen/_14sdp" />




        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_2sdp"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:layerType="software"
            android:src="@drawable/dialogue_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginRight="@dimen/_3sdp"
                android:layout_weight="1">

                <com.rey.material.widget.Button
                    android:id="@+id/button_yes"
                    style="@style/Material.Drawable.Ripple.Touch"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_30sdp"
                    android:background="@drawable/submit"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:paddingBottom="@dimen/_3sdp"
                    android:paddingTop="@dimen/_3sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:paddingLeft="@dimen/_10sdp"
                    android:text="@string/ok"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/_16sdp" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>