<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingLeft="@dimen/_15sdp"
        android:paddingRight="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/white"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_15sdp"
        android:paddingTop="@dimen/_15sdp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:background="@drawable/truckbg_ico" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/float_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColorHint="@color/colorAccent">

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/user_name"
                android:inputType="text"
                android:maxLines="1"
                android:paddingTop="@dimen/_10sdp"
                android:textColor="#000000"
                android:textSize="@dimen/_15sdp" />
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="#E1E1E1" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/float_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:textColorHint="@color/colorAccent">

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/emailsa"
                android:inputType="textWebEmailAddress"
                android:maxLines="1"
                android:paddingTop="@dimen/_10sdp"
                android:textColor="#000000"
                android:textSize="@dimen/_15sdp" />
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="#E1E1E1" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_2sdp"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:layerType="software"
            android:src="@drawable/dialogue_line" />

        <com.rey.material.widget.Button
            android:id="@+id/button_update"
            style="@style/Material.Drawable.Ripple.Touch"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_13sdp"
            android:background="@drawable/submit"
            android:gravity="center"
            android:paddingBottom="@dimen/_5sdp"
            android:paddingRight="@dimen/_3sdp"
            android:text="@string/updateac"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/_16sdp" />


    </LinearLayout>


    <ImageView
        android:id="@+id/button_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="false"
        android:layout_marginTop="@dimen/_15sdp"
        android:paddingLeft="@dimen/_5sdp"
        android:src="@drawable/close_btn" />


</RelativeLayout>